First step toward greatness

--- a/index.html
+++ b/index.html
@@ -26,7 +26,58 @@
       <!-- Main content -->
       <main id="mainContent">
         <h2>Welcome!</h2>
-        <p>Work in progress.</p>
+        <p>
+          This is my space to learn, experiment, and build cool things while
+          sharing what drives me.
+        </p>
+
+        <h3>🌍 My Interests</h3>
+        <ul>
+          <li>Programming, data science, AI/ML</li>
+          <li>DevOps, cloud computing, system engineering</li>
+          <li>Robotics, control systems, security/hacking</li>
+          <li>Space, astronomy, and observing the skies</li>
+          <li>Biology & gene editing, ecological experiments</li>
+          <li>Economics, politics, and optimizing government systems</li>
+        </ul>
+
+        <h3>💡 How I Want to Change the World</h3>
+        <ul>
+          <li>Create civic engagement platforms to empower communities</li>
+          <li>
+            Build smart city systems for better services and sustainability
+          </li>
+          <li>
+            Encourage good deeds and coordinated social impact (Ripple project)
+          </li>
+          <li>
+            Develop tools for education, awareness, and scientific curiosity
+          </li>
+        </ul>
+
+        <h3>⚖️ My Principles</h3>
+        <ul>
+          <li>Truth, transparency, and open knowledge</li>
+          <li>Efficiency in using resources and time</li>
+          <li>Collaboration over competition</li>
+          <li>Ethics and responsibility in technology</li>
+        </ul>
+
+        <h3>💪 My Strengths</h3>
+        <ul>
+          <li>Systemic & analytical thinking</li>
+          <li>Curiosity across disciplines (tech, science, society)</li>
+          <li>Problem-solving mindset</li>
+          <li>Persistence and adaptability</li>
+        </ul>
+
+        <h3>🛡️ Things I Want to Fight Off</h3>
+        <ul>
+          <li>Corruption and inefficiency in governance</li>
+          <li>Exploitation and blind profit-driven capitalism</li>
+          <li>Disinformation and ignorance</li>
+          <li>Environmental neglect</li>
+        </ul>
       </main>
 
       <!-- Right panel -->
