Adding up stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <nav id="sideMenu">
         <button id="toggleMenuBtn">☰</button>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="intro.html">Introduction</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
