Working on frontend =))

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="intro.html">Introduction</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="auth.html">Login</a></li>
         </ul>
       </nav>
 
@@ -31,7 +32,7 @@
           This is my space to learn, experiment, and build cool things while
           sharing what drives me.
         </p>
-
+        <button id="logoutBtn" class="hidden">Logout</button>
         <h3>🌍 My Interests</h3>
         <ul>
           <li>Programming, data science, AI/ML</li>
