--- a/auth.html
+++ b/auth.html
@@ -41,66 +41,74 @@
 
     <script src="app.js"></script>
     <script>
-      // Tab switching (same as before)
-      const loginTab = document.getElementById("loginTab");
-      const signupTab = document.getElementById("signupTab");
-      const loginForm = document.getElementById("loginForm");
+      // auth.js
+
+      // Signup form handler
       const signupForm = document.getElementById("signupForm");
+      if (signupForm) {
+        signupForm.addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-      loginTab.addEventListener("click", () => {
-        loginTab.classList.add("active");
-        signupTab.classList.remove("active");
-        loginForm.classList.remove("hidden");
-        signupForm.classList.add("hidden");
-      });
+          const username = document.getElementById("signupUsername").value;
+          const email = document.getElementById("signupEmail").value;
+          const password = document.getElementById("signupPassword").value;
 
-      signupTab.addEventListener("click", () => {
-        signupTab.classList.add("active");
-        loginTab.classList.remove("active");
-        signupForm.classList.remove("hidden");
-        loginForm.classList.add("hidden");
-      });
+          try {
+            const res = await fetch("http://localhost:5000/api/signup", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ username, email, password }),
+            });
 
-      // --- Fake Auth with localStorage ---
-      const users = JSON.parse(localStorage.getItem("users")) || [];
+            const data = await res.json();
 
-      // Signup
-      signupForm.addEventListener("submit", (e) => {
-        e.preventDefault();
-        const username = document.getElementById("signupUsername").value;
-        const email = document.getElementById("signupEmail").value;
-        const password = document.getElementById("signupPassword").value;
+            if (res.ok) {
+              alert("✅ Signup successful! Please login.");
+              window.location.href = "auth.html"; // redirect to login form
+            } else {
+              alert("❌ " + (data.error || "Signup failed"));
+            }
+          } catch (err) {
+            console.error("Signup error:", err);
+            alert("⚠️ Could not connect to server.");
+          }
+        });
+      }
 
-        // Check if email already exists
-        if (users.find((user) => user.email === email)) {
-          alert("Email already registered!");
-          return;
-        }
+      // Login form handler
+      const loginForm = document.getElementById("loginForm");
+      if (loginForm) {
+        loginForm.addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-        users.push({ username, email, password });
-        localStorage.setItem("users", JSON.stringify(users));
-        alert("Account created! You can now log in.");
-        signupForm.reset();
-      });
+          const email = document.getElementById("loginEmail").value;
+          const password = document.getElementById("loginPassword").value;
 
-      // Login
-      loginForm.addEventListener("submit", (e) => {
-        e.preventDefault();
-        const email = document.getElementById("loginEmail").value;
-        const password = document.getElementById("loginPassword").value;
+          try {
+            const res = await fetch("http://localhost:5000/api/login", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ email, password }),
+            });
 
-        const user = users.find(
-          (u) => u.email === email && u.password === password
-        );
+            const data = await res.json();
 
-        if (user) {
-          localStorage.setItem("currentUser", JSON.stringify(user));
-          alert(`Welcome back, ${user.username}!`);
-          window.location.href = "index.html"; // redirect to home
-        } else {
-          alert("Invalid credentials!");
-        }
-      });
+            if (res.ok && data.token) {
+              // Save JWT + username in localStorage
+              localStorage.setItem("token", data.token);
+              localStorage.setItem("username", data.username);
+
+              alert("✅ Login successful! Welcome " + data.username);
+              window.location.href = "index.html"; // go to main page
+            } else {
+              alert("❌ " + (data.error || "Login failed"));
+            }
+          } catch (err) {
+            console.error("Login error:", err);
+            alert("⚠️ Could not connect to server.");
+          }
+        });
+      }
     </script>
   </body>
 </html>
