--- a/auth.html
+++ b/auth.html
@@ -39,76 +39,7 @@
       </form>
     </div>
 
-    <script src="app.js"></script>
-    <script>
-      // auth.js
-
-      // Signup form handler
-      const signupForm = document.getElementById("signupForm");
-      if (signupForm) {
-        signupForm.addEventListener("submit", async (e) => {
-          e.preventDefault();
-
-          const username = document.getElementById("signupUsername").value;
-          const email = document.getElementById("signupEmail").value;
-          const password = document.getElementById("signupPassword").value;
-
-          try {
-            const res = await fetch("http://localhost:5000/api/signup", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ username, email, password }),
-            });
-
-            const data = await res.json();
-
-            if (res.ok) {
-              alert("✅ Signup successful! Please login.");
-              window.location.href = "auth.html"; // redirect to login form
-            } else {
-              alert("❌ " + (data.error || "Signup failed"));
-            }
-          } catch (err) {
-            console.error("Signup error:", err);
-            alert("⚠️ Could not connect to server.");
-          }
-        });
-      }
-
-      // Login form handler
-      const loginForm = document.getElementById("loginForm");
-      if (loginForm) {
-        loginForm.addEventListener("submit", async (e) => {
-          e.preventDefault();
-
-          const email = document.getElementById("loginEmail").value;
-          const password = document.getElementById("loginPassword").value;
-
-          try {
-            const res = await fetch("http://localhost:5000/api/login", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ email, password }),
-            });
-
-            const data = await res.json();
-
-            if (res.ok && data.token) {
-              // Save JWT + username in localStorage
-              localStorage.setItem("token", data.token);
-              localStorage.setItem("username", data.username);
-
-              alert("✅ Login successful! Welcome " + data.username);
-              window.location.href = "index.html"; // go to main page
-            } else {
-              alert("❌ " + (data.error || "Login failed"));
-            }
-          } catch (err) {
-            console.error("Login error:", err);
-            alert("⚠️ Could not connect to server.");
-          }
-        });
-      }
-    </script>
+    <!-- JS scripts -->
+    <script src="auth.js"></script>
   </body>
 </html>
